Bug 190596 - Dolphin gravely mishandles named pipes
Summary: Dolphin gravely mishandles named pipes
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: SVN
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-25 06:34 UTC by Alec Moskvin
Modified: 2009-06-10 19:10 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alec Moskvin 2009-04-25 06:34:29 UTC
Version:            (using KDE 4.2.2)
Compiler:          gcc (Gentoo 4.3.3-r2 p1.1, pie-10.1.5) 4.3.3 
OS:                Linux
Installed from:    Gentoo Packages

How to Reproduce:
1. Open a terminal and run:
 $ mkfifo mypipe
2. Open dolphin or konqueror to the direcory where you made the pipe.
3. Try to right click mypipe and select "Properties"

Result:
The application freezes as it waits for the pipe to release data.

If there actually is something writing into the pipe, dolphin reads and subsequently destroys the data.

Expected Behaviour:
Pipes are not regular files and should not be treated as such.
Comment 1 FiNeX 2009-04-25 16:05:28 UTC
confirmed in trunk too.
Comment 2 Dario Andres 2009-05-24 21:06:29 UTC
http://reviewboard.kde.org/r/723/ should fix this
Comment 3 Dario Andres 2009-06-10 19:10:11 UTC
SVN commit 979879 by darioandres:

Add KFleItem::isRegularFile() to check for regular files (!chr/blk/dir/fifo/link/sock)

Do not fetch the metadata information on non-regular files as this will likely 
block the application when reading them.

BUG: 190596


 M  +5 -1      kfileitem.cpp  
 M  +7 -0      kfileitem.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=979879