Add KFleItem::isRegularFile() to check for regular files (!chr/blk/dir/fifo/link/sock)

Do not fetch the metadata information on non-regular files as this will likely 
block the application when reading them.

BUG: 190596

svn path=/trunk/KDE/kdelibs/; revision=979879